# prompter

./: .gitignore  README.md  pyproject.toml
src/prompter/: __init__.py  artifacts.py  db.py  placeholder.py
src/prompter/cli/: artifact_client.py  compile.py  main.py  skills_scan.py  tui.py
src/prompter/server/: __init__.py  app.py
src/prompter/server/static/: app.js  style.css
src/prompter/server/templates/: archived.html  base.html  form.html  index.html  skill_detail.html  skills.html  templates.html
tests/: test_artifacts.py  test_placeholder.py
