[project]
name = "prompter"
version = "0.1.0"
description = "Context (CLAUDE.md/AGENTS.md) & prompt snippet manager: sqlite DB + web editor + CLI compiler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "typer>=0.12",
    "InquirerPy>=0.3.4",
]

[project.scripts]
prompter = "prompter.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompter"]

[tool.uv]
package = true
